# neo-edo

./: CMakeLists.txt  Makefile  vcpkg.json
assets/: testbomb.glb  torus.gltf
assets/shaders/: blur.frag  lit.frag  lit.vert  shadow_depth.frag  shadow_depth.vert
src/: main.cpp
src/engine/camera/: camera.cpp  camera.h
src/engine/input/: input_handler.cpp  input_handler.h
src/engine/renderer/: material.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shadow_map.cpp  shadow_map.h
src/engine/renderer/draw/: draw.cpp  draw.h  draw_clear.cpp  draw_clear.h  draw_depth.cpp  draw_depth.h  draw_flat.cpp  draw_flat.h  draw_lit.cpp  draw_lit.h
src/engine/resource/: gltf_loader.cpp  gltf_loader.h  gltf_parser.cpp  gltf_parser.h  gltf_skin.cpp  gltf_skin.h  mesh_factory.cpp  mesh_factory.h  mesh_manager.h  obj_loader.cpp  obj_loader.h  obj_parser.cpp  obj_parser.h  shader_manager.h
src/engine/scene/: directional_light.h  entity.h  scene.cpp  scene.h  transform.h
src/engine/window/: window.cpp  window.h
